force-app/main/default/objects/Interacao__c/Interacao__c.object-meta.xml
<CustomObject>
    <label>Interacao</label>
    <nameField>
        <label>Interacao Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interacoes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>