force-app/main/default/objects/Interacao__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <label>Mensagem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>