force-app/main/default/objects/Interacao__c/fields/PedidoSuporte__c.field-meta.xml
<CustomField>
    <fullName>PedidoSuporte__c</fullName>
    <label>PedidoSuporte</label>
    <referenceTo>PedidoSuporte__c</referenceTo>
    <relationshipLabel>Interacoes</relationshipLabel>
    <relationshipName>Interacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>